RESOLVED FIXED120774
[Qt][WK2] Window used by WebKitTestRunner loses active status
https://bugs.webkit.org/show_bug.cgi?id=120774
Summary [Qt][WK2] Window used by WebKitTestRunner loses active status
Allan Sandfeld Jensen
Reported 2013-09-05 08:21:05 PDT
Many tests using injected events are flaky using Qt 5.1. It appears to happen if a previous test opens another window making that window active, which results in the main-window not being active when the next test is started.
Attachments
Patch (1.42 KB, patch)
2013-09-05 08:29 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2013-09-05 08:29:18 PDT
Allan Sandfeld Jensen
Comment 2 2013-09-06 02:55:13 PDT
Comment on attachment 210617 [details] Patch Clearing flags on attachment: 210617 Committed r155182: <http://trac.webkit.org/changeset/155182>
Allan Sandfeld Jensen
Comment 3 2013-09-06 02:55:18 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.