[Qt][WK2] Window used by WebKitTestRunner loses active status https://bugs.webkit.org/show_bug.cgi?id=120774

Reviewed by Jocelyn Turcotte.

When focusing the PlatformWebView which is done at the start of each test, we should
ensure the host window of PlatformWebView is also made active, otherwise we will
not receive the keyboard events send by EventSenderProxy.

* WebKitTestRunner/qt/PlatformWebViewQt.cpp:
(WTR::PlatformWebView::focus):

Canonical link: https://commits.webkit.org/138791@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155182 268f45cc-cd09-0410-ab3c-d52691b4dbfc